--- a/.classpath
+++ b/.classpath
@@ -6,8 +6,42 @@
 	<classpathentry kind="src" path="actions"/>
 	<classpathentry kind="src" path="interfaces"/>
 	<classpathentry kind="src" path="resources"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar" sourcepath="libraries/client-combined-3.141.59-sources.jar"/>
 	<classpathentry kind="lib" path="libraries/testng-6.14.3.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/bcpkix-jdk15on-1.64.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/bcprov-jdk15on-1.64.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/checker-qual-3.8.0.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/commons-codec-1.13.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/commons-compress-1.20.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/dec-0.1.2.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/docker-java-3.2.11.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/docker-java-api-3.2.11.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/docker-java-core-3.2.11.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/docker-java-transport-3.2.11.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/docker-java-transport-httpclient5-3.2.11.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/error_prone_annotations-2.5.1.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/failureaccess-1.0.1.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/gson-2.8.8.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/guava-30.1.1-jre.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/httpclient5-5.0.3.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/httpcore5-5.0.2.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/j2objc-annotations-1.3.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/jackson-annotations-2.10.3.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/jackson-core-2.10.3.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/jackson-databind-2.10.3.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/jcl-over-slf4j-1.7.30.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/jna-5.8.0.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/jsoup-1.14.2.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/jsr305-3.0.2.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/slf4j-api-1.7.32.jar"/>
+	<classpathentry kind="lib" path="libDriverManager/webdrivermanager-5.0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
