--- a/.classpath
+++ b/.classpath
@@ -43,5 +43,10 @@
 	<classpathentry kind="lib" path="libDriverManager/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar"/>
 	<classpathentry kind="lib" path="libDriverManager/slf4j-api-1.7.32.jar"/>
 	<classpathentry kind="lib" path="libDriverManager/webdrivermanager-5.0.2.jar"/>
+	<classpathentry kind="lib" path="libLogging/commons-codec-1.11.jar"/>
+	<classpathentry kind="lib" path="libLogging/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="libLogging/commons-lang3-3.8.1.jar"/>
+	<classpathentry kind="lib" path="libLogging/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="libLogging/log4j-1.2.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
